# visual-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  train.py  train_classify.py  train_detect.py  val.py  val_classify.py  val_detect.py
auxiliary/: __init__.py  deal_label_datasets.py  download_datasets.py  map.py  transfer_learning.py
data/datasets/: Customdatasets.yaml  Mydatasets.yaml  VOC.yaml
data/datasets/classification/: MNIST.yaml
data/datasets/detection/: COCO.yaml  URPC.yaml  VOC.yaml
data/hyp/: hyp_classify_train.yaml  hyp_detect_train.yaml
download_datasets/: download.py
metaclass/: metamodel.py  metatrainer.py  metavaler.py
models/: __init__.py  demo_model_classify.py  demo_model_detect.py  metamodel.py  model_classify.py  model_detect.py  model_utils.py  units.py  units_utils.py  yolov5s_v6.py
models/yolov5/: yolov5_v6.py
src/visual/demo/: train_detect.py  val_classify.py  val_detect.py
src/visual/metaclass/: metamodel.py  metatrainer.py  metavaler.py
src/visual/models/: demo_model_classify.py  demo_model_detect.py  units.py  units_utils.py
src/visual/models/yolov5/: yolov5_v6.py
src/visual/utils/: WRITER.py  augmentation.py  bbox.py  check.py  datasets.py  decode.py  general.py  log.py  loss.py  lr_schedulers.py  mixins.py  optimizers.py
utils/: WRITER.py  __init__.py  augmentation.py  bbox.py  check.py  datasets.py  decode.py  general.py  log.py  loss.py  lr_schedulers.py  metatrainer.py  metavaler.py  metrics.py  mixins.py  swa.py  typeslib.py  units_utils.py
utils/plot/: map.py
(+1 files in other folders)
