[metadata]
name = visual
version = attr: visual.__version__
author = LEFTeyes
author_email = 1079316858@qq.com
description = A Visual Framework for deep learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LEFTeyex/visual-framework
project_urls =
    Bug Tracker = https://github.com/LEFTeyex/visual-framework/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    tensorboard >= 2.8.0
    numpy >= 1.21.5
    pandas >= 1.3.5
    openpyxl >= 3.0.9
    opencv-python >= 4.5.1.48
    matplotlib >= 3.5.1
    tqdm >= 4.62.3
    PyYAML >= 6.0
    grad-cam >= 1.3.7
    pycocotools >= 2.0.3
#     torch >= 1.7.1

[options.packages.find]
where = src
include = visual*
excluded =
    __init__.py